--- a/views/lecturer/test.ejs
+++ b/views/lecturer/test.ejs
@@ -157,7 +157,7 @@
                     <td>
                       &nbsp;
                       <a
-                        href='<%= "/writen-test/view?test=" + test.test_id %>'
+                        href="/writen-test/view/<%=test.test_id %>"
                         class="oq-btn"
                       >
                         <span class="glyphicon glyphicon-pencil"></span>
