--- a/views/student/result.ejs
+++ b/views/student/result.ejs
@@ -35,15 +35,12 @@
             </div>
           </div>
 
-
         <div class="oq-scoreBoardBody">
         	<div class="oq-scoreBoard">
         		<div id="scoreboard">
-                    <p id='scoreboard1'>Your score : <%= correctCount  +' out of '+ total  %></p>
-                    <p id='scoreboard2'>Number of wrong answers are: <%= wrongCount %></p>
-                    <p id='scoreboard3'>Number of unanswered questions: <%= notAnswered  %></p>
-                    <p id='scoreboard4'>Correct answered questions are: <%= correctCount  %></p>
-                    <p id='scoreboard5'>Number of answered questions are: <%= answered  %></p>
+                    <p id='scoreboard1'>Your result for  <%= moduleName +' '+ testName %> is : <span id="correctCount"></span> out of <span id="totalCount"></span> which is <span id="percentage"></span></p>
+                    <p id='scoreboard2'><span id="feedback"></span>.</p>
+                    <p id='scoreboard4'>You can visit your lecturer's office to get a printout report.</p>
         		</div>
         		<div>
         			<p id="retake">To take another test say the word "Menu" or say the word "STOP" to logout of the system.</p>
@@ -52,8 +49,10 @@
         	</div>
         </div>
 
-        <script src="js/jquery-3.1.1.min.js"></script>
-        <script src="js/bootstrap.js"></script>
+
+		<script src="/js/currentUserResutl.js"></script>
+        <script src="/js/jquery-3.1.1.min.js"></script>
+        <script src="/js/bootstrap.js"></script>
         <script type="text/javascript">
         	var resultPara = document.querySelector('#spresult');
         	var syn = window.speechSynthesis;
@@ -101,11 +100,12 @@
 			    console.log(SpeechRecognition);
 			    recognition.onresult = function(event) {
 			        var speechResult = event.results[0][0].transcript;
-			        if(speechResult == "menu") {
+					console.log("speechResult.toLowerCase() : ", speechResult.toLowerCase());
+			        if(speechResult == "menu" || speechResult.toLowerCase() == "menu" || speechResult.toLowerCase().includes("menu")  ) {
 			        	flag = 1;
 			        	window.location = '/';
 			        }
-			        else if(speechResult == "stop"){
+			        else if(speechResult.toLowerCase() == "stop" || speechResult.toLowerCase().includes("stop") || speechResult.toLowerCase().includes("logout") || speechResult.toLowerCase().includes("log out")){
 			        	flag = 2;
 			        	window.location = '/auth/logout';
 			        }else {
@@ -123,6 +123,7 @@
 			    }
 			    recognition.onend = function() {
 			        console.log("onend");
+					console.log("Must Logout User Automatically......");
 			        if(flag == 1 || flag == 2 || flag == 3){
 			        	console.log("onend if");
             			recognition.stop();
@@ -138,6 +139,7 @@
 			    }
 			    recognition.onerror = function(event) {
 			        flag = 4;
+					console.log("On Error.........");
 			        console.log("flag :"+flag);
 			        retest();
 			    }
