--- a/views/student/outcome.ejs
+++ b/views/student/outcome.ejs
@@ -18,7 +18,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="">
-              <a href="index.php"
+              <a href="/"
                 ><img src="/images/quiz.png" class="oq-logo"
               /></a>
             </div>
