--- a/views/lecturer/menu.ejs
+++ b/views/lecturer/menu.ejs
@@ -201,7 +201,7 @@
                   action=""
                   method="post"
                 >
-                  <span class="oq-modalLangHead">Delete the module</span
+                  <span class="oq-modalLangHead">You are unable to delete the module.</span
                   ><br /><br />
                   <div class="col-md-2" id=""></div>
                   <div class="col-md-4">
@@ -219,14 +219,7 @@
                     </select>
                   </div>
                   <br />
-                  <div class="col-md-4">
-                    <input
-                      type="submit"
-                      class="form-control oq-deletebtn"
-                      value="Delete Module"
-                      name="subjectdelete"
-                    />
-                  </div>
+    
                 </form>
               </div>
               <br /><br />
@@ -234,8 +227,8 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                   <span class="oq-caution" id="module-delete-error"
-                    >*All the tests and questions of selected module will be
-                    lost if delete module is pressed</span
+                    >
+                    The module cannot be deleted because some students have already registered or written tests for it.</span
                   >
                 </div>
               </div>
