Full RSA ID Validation

--- a/views/admin/lecturers.ejs
+++ b/views/admin/lecturers.ejs
@@ -121,7 +121,7 @@
                           type="submit"
                           id="edit-user-btn"
                           class="oq-deletebtn"
-                          value="Delete Student"
+                          value="Delete lecturer"
                           name="update"
                         /><br /><br />
                       </form>
