--- a/views/admin/success_page.ejs
+++ b/views/admin/success_page.ejs
@@ -50,7 +50,6 @@
                       class="oq-testsHeadText"
                       style="text-transform: capitalize"
                     >
-                      <%=user_role%>
                     </span>
                   </div>
                   <div class="col-md-3">
@@ -60,7 +59,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="pull-right">
-                      <a href="/<%=user_role%>s" class="oq-addbtn">Back</a>
+                      <a href="/" class="oq-addbtn">Back</a>
                     </div>
                   </div>
                 </div>
