--- a/views/student/module.ejs
+++ b/views/student/module.ejs
@@ -53,9 +53,17 @@
                             <% if (tests.length > 0) { %>
                                 List of tests for the subject <%= module_name %> are.. <br><br>
                               <% for (let i = 0; i < tests.length; i++) { %>
-                                <span class="tests"><%= words[i] %>.</span><br> <br>
+
+                                 <a href="/tests/<%= tests[i].test_id %>">
+
+                                     <span class="tests"><%= words[i] %>.</span>
+
+                                 </a>
+
+
+                               <br> <br>
                               <% } %>
-                              Choose one by saying the test name or say repeat to repeat the list.
+                              Choose one by saying the test name or say repeat to repeat the list.  Or you can click the test.
                             <% } else { %>
                               There are no tests available to write for <%= module_name %> <br> <br> <span>You will be redirected to main page in seconds .</span>
                             <% } %>
