--- a/views/student/modules.ejs
+++ b/views/student/modules.ejs
@@ -58,9 +58,13 @@
     <% if (modules.length > 0) { %>
         List of subjects are given below. <br><br>
       <% for (let i = 0; i < modules.length; i++) { %>
-        <span class="modules"><%= words[i] %>.</span><br> <br>
+       
+        
+        <a href="/modules/<%= modules[i].module_code  %>"> <span class="modules"><%= words[i] %>.</span>  </a>
+        
+        <br> <br>
       <% } %>
-      Choose one by saying the test name or say repeat to repeat the list.
+      Choose one by saying the test name or say repeat to repeat the list. Or you can click the subject.
     <% } else { %>
         There are no available subjects for you <br> <br> <span>You will be redirected to main page in seconds .</span>
     <% } %>
