Question Translation Working

--- a/views/student/menu.ejs
+++ b/views/student/menu.ejs
@@ -41,10 +41,18 @@
                         </div>
                         <hr>
                         <br>
+                        <a href="/modules">
+                                     <span > View All The Subjects</span>
+                    </a>
+                      
+                     <br><br>
 
                         <span id="oq-subjectsList"><span class="oq-menuHead">Welcome to edu exam <%= user.first_name %>
-                                 </span><br><br>To know about all the subjects, say List
-                            the subjects </span>
+                                 </span>
+                                 <br> <br>
+                                 
+                                 To know about all the subjects, say List
+                            the subjects. Or click the link above.</span>
                         <p id="spresult" class="spresult"></p>
                     </div>
                 </div>
