--- a/views/student/modules.ejs
+++ b/views/student/modules.ejs
@@ -25,9 +25,27 @@
                     <% } else { %>
                         <% console.log('No Modules Available'); %>
                     <% } %>
+   
                     
 
+                        <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            window.addEventListener('beforeunload', function(event) {
+
+                console.log("Trying to stop speaker of prev page.....");
+
+                if (speechSynthesis.speaking) {
+                     console.log("It is speaking so now you can stop it.");
+                    speechSynthesis.cancel();
+                }
+            });
+        });
+    </script>
+
 </head>
+
+
+
 
 <body>
     <div class="oq-header">
