--- a/views/student/test.ejs
+++ b/views/student/test.ejs
@@ -46,8 +46,25 @@
           }
         }, 1000);
       }
-    </script></head
-  >
+    </script>
+    
+    
+        <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            window.addEventListener('beforeunload', function(event) {
+
+                console.log("Trying to stop speaker of prev page.....");
+
+                if (speechSynthesis.speaking) {
+                     console.log("It is speaking so now you can stop it.");
+                    speechSynthesis.cancel();
+                }
+            });
+        });
+    </script>
+    
+    
+    </head>
 
   <body>
     <div class="oq-header">
