Stop Speech After Submiting Result

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,22 @@
       content="Sukanya Ledalla, Akhil Regonda, Nishanth Kadapakonda"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+                <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            window.addEventListener('beforeunload', function(event) {
+
+                console.log("Trying to stop speaker of prev page.....");
+
+                if (speechSynthesis.speaking) {
+                     console.log("It is speaking so now you can stop it.");
+                    speechSynthesis.cancel();
+                }
+            });
+        });
+    </script>
+
+
   </head>
 
   <body>
