--- a/views/student/test.ejs
+++ b/views/student/test.ejs
@@ -115,7 +115,8 @@
                   <br />2. To repeat question say the word "repeat question".  <br />
                   <br />3. To submit the test say the word "submit test".  <br />
                    <br />4. To translate the question to Zulu language click the icon next to question.<br />
-                  <br />5. To start exam say the word "start or begin". <br />
+                  <br />5. To translate your answer to Zulu language click the button below the answer.<br />
+                  <br />6. To start the test say begin or wait the test will start in few seconds<br />
                  
                 </p>
                 <br />
