Make Language dynamic - to be translated to

--- a/views/student/test.ejs
+++ b/views/student/test.ejs
@@ -114,8 +114,8 @@
                   <br />1. To navigate between the questions say the word "next question" or "previous question".  <br />
                   <br />2. To repeat question say the word "repeat question".  <br />
                   <br />3. To submit the test say the word "submit test".  <br />
-                   <br />4. To translate the question to Zulu language click the icon next to question.<br />
-                  <br />5. To translate your answer to Zulu language click the button below the answer.<br />
+                   <br />4. Click the icon next to the question to translate it into <%= language %>.<br />
+                  <br />5. To translate your answer into <%= language %>, click the button located below the answer area.<br />
                   <br />6. To start the test say begin or wait the test will start in few seconds<br />
                  
                 </p>
