--- a/views/student/outcome.ejs
+++ b/views/student/outcome.ejs
@@ -74,7 +74,7 @@
                             <th><%= user.percentage%>%</th>
                             <th>
 
-                              <a target="_blank" href="/report/view/<%= user.user_id %>/<%= moduleId %>/<%= testId %>"> View Report </a>
+                              <a href="/report/view/<%= user.user_id %>/<%= moduleId %>/<%= testId %>"> View Report </a>
 
                             </th>
 
