--- a/views/student/outcome.ejs
+++ b/views/student/outcome.ejs
@@ -45,6 +45,15 @@
         <div class='container-fluid'>
             <div class='row'>
                 <div class='col-md-8 col-md-offset-2'>
+
+                  <div class="pull-right" >
+                    <a href="/export/<%= testId %>">
+                      <span
+                      class="oq-addbtn" style="cursor: pointer;"> Export To Excel (CSV)
+                      </span>
+                    </a>
+                  
+                  </div>
      
                     <div class="oq-userResult">
                         <h5>Following consists of tests scores along with the subject name:</h5><br>
@@ -55,6 +64,7 @@
                                 <th>Student Number</th>
                                 <th>First Name</th>
                                 <th>LastName</th>
+                                <th>Date</th>
                                 <th>Module</th>
                                 <th>Test Name</th>
                                 <th>Marks</th>
@@ -69,6 +79,7 @@
                             <th> <%= user.identification_number %></th>
                             <th> <%= user.first_name %></th>
                             <th><%= user.last_name %></th>
+                            <th><%= user.date %></th>
                             <th><%= moduleName %></th>
                             <th><%= testName %></th>
                             <th><%= user.percentage%>%</th>
