--- a/views/student/outcome.ejs
+++ b/views/student/outcome.ejs
@@ -47,11 +47,11 @@
                 <div class='col-md-8 col-md-offset-2'>
 
                   <div class="pull-right" >
-                    <a href="/export/<%= testId %>">
+                    <!-- <a href="/export/">
                       <span
                       class="oq-addbtn" style="cursor: pointer;"> Export To Excel (CSV)
                       </span>
-                    </a>
+                    </a> -->
                   
                   </div>
      
